fixing skills bars on smaller screens

--- a/Tyler_Ruffolo_Website/CSS/styles.css
+++ b/Tyler_Ruffolo_Website/CSS/styles.css
@@ -633,3 +633,11 @@ textarea{
 .home-container{
     width: 100%;
 }
+
+
+@media screen and (max-width: 800px) {
+
+    .skills-container{
+        display: block;
+    }
+}
